2013-08-06  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_tasks.php
	  operation/projects/task.php: Visual changes
	  in the task tree view to adapt it to the new
	  width of Integria.

2013-08-06  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions.php
	  include/functions_form.php
	  operation/projects/gantt.php
	  operation/projects/project_download_file.php
	  operation/projects/project_overview.php
	  operation/projects/task_files.php
	  operation/projects/task_incidents.php
	  operation/projects/task_planning.php: Fixed the
	  calls to the function "get_project_access".
	  
	* include/auth/mysql.php: Fixed the function
	"get_user_info".

2013-08-06  Sergio Martin <sergio.martin@artica.es>

	* include/styles/calendar.css
	include/styles/integria.css
	include/functions_calendar.php
	index.php
	operation/side_menu.php
	operation/main_menu.php
	images/input_zoom.png
	images/lightbulb.png
	images/header_user.png
	images/header_setup.png
	images/clock.png
	images/header_warning.png
	images/award_star_silver_1.png
	images/exclamation.png
	images/chart_bar.png
	images/header_logout.png
	images/darkgrey_bg.png
	images/integria_logo_header.png
	images/header_suit.png
	images/paste_plain.png
	images/orange_bg.png
	general/header.php: Change the styles of the header
	and side menu to new appearence

2013-08-06  Dario Rodriguez <dario@artica.es>

	* include/load_session.php: Added header.
	* include/config_process.php: Fixed a require
	once function.
	
	#This commit was made from internal site 
	# and I do not own the propety or any
	# attribution from it.

2013-08-06  Dario Rodriguez <dario@artica.es>

	* include/mailtemplates/wo_new_note.tpl,
	include/mailtemplates/wo_subject_delete.tpl,
	include/mailtemplates/wo_delete_note.tpl,
	include/mailtemplates/wo_subject_new_note.tpl,
	include/mailtemplates/wo_delete.tpl,
	include/mailtemplates/wo_subject_delete_note.tpl: New templates
	for WO emails.