@@ -1,3 +1,8 @@
+2013-08-06  Sergio Martin <sergio.martin@artica.es>
+
+	* include/styles/integria.css
+	index.php: Fix login screen background
+
 2013-08-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
 
 	* include/functions_tasks.php
